--- a/views/status.erb
+++ b/views/status.erb
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
 <body>
 
 <h1>Bathroomify</h1>
